melhorias na impressao do tabuleiro